--- a/Kubernetes-Manifests-file/Backend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Backend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: api
-        image: 407622020962.dkr.ecr.us-east-1.amazonaws.com/backend:latest
+        image: public.ecr.aws/j6o9t4v5/capbackend:latest
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
