--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -25,10 +25,10 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: frontend
-        image: 407622020962.dkr.ecr.us-east-1.amazonaws.com/frontend:latest
+        image: public.ecr.aws/j6o9t4v5/capfrontend:latest
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
-            value: "http://backend.amanpathakdevops.study/api/tasks"
+            value: "http://skillwithrohit.shop/api/tasks"
         ports:
         - containerPort: 3000
