--- a/Kubernetes-Manifests-file/ingress.yaml
+++ b/Kubernetes-Manifests-file/ingress.yaml
@@ -4,27 +4,36 @@ metadata:
   name: mainlb
   namespace: three-tier
   annotations:
-    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/actions.api: >
+      {"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"api","ServicePort":"3500"}]},"Conditions":[{"Field":"path-pattern","Values":["/api/*"]}]}
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
+
 spec:
   ingressClassName: alb
   rules:
-    - host: backend.amanpathakdevops.study
+    - host: codebyrohit.skillwithrohit.shop
       http:
         paths:
+          - path: /ok
+            pathType: Prefix
+            backend:
+              service:
+                name: api
+                port:
+                  number: 3500
           - path: /api
             pathType: Prefix
             backend:
               service:
                 name: api
-                port:   
+                port:
                   number: 3500
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: frontend
-                port: 
+                port:
                   number: 3000
-      
