--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,7 @@ phases:
       - echo Setting dynamic image tag...
       - export IMAGE_TAG=v1.${CODEBUILD_BUILD_NUMBER}
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com
+      - aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin public.ecr.aws
       - echo Installing frontend and backend dependencies...
       - cd $FRONTEND_DIR && npm install && cd -
       - cd $BACKEND_DIR && npm install && cd -
