--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,11 @@ version: 0.2
 
 env:
   variables:
-    ACCOUNT_ID: 026090548352
+    ACCOUNT_ID: 026090545815
     REGION: us-east-1
-    FRONTEND_REPO: three-tier-frontend
-    BACKEND_REPO: three-tier-backend
+    FRONTEND_REPO: capfrontend
+    BACKEND_REPO: capbackend
+    Alias: j6o9t4v5
     FRONTEND_DIR: Application-Code/frontend
     BACKEND_DIR: Application-Code/backend
     K8S_MANIFEST_DIR: Kubernetes-Manifests-file
@@ -23,7 +24,7 @@ phases:
       - echo Setting dynamic image tag...
       - export IMAGE_TAG=v1.${CODEBUILD_BUILD_NUMBER}
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com
+      - aws ecr-public get-login-password | docker login --username AWS --password-stdin public.ecr.aws
       - echo Installing frontend and backend dependencies...
       - cd $FRONTEND_DIR && npm install && cd -
       - cd $BACKEND_DIR && npm install && cd -
@@ -32,25 +33,25 @@ phases:
     commands:
       - echo Building Docker images...
       - docker build -t $FRONTEND_REPO:$IMAGE_TAG $FRONTEND_DIR
-      - docker tag $FRONTEND_REPO:$IMAGE_TAG ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/$FRONTEND_REPO:$IMAGE_TAG
+      - docker tag $FRONTEND_REPO:$IMAGE_TAG public.ecr.aws/$Alias/$FRONTEND_REPO:$IMAGE_TAG
       - docker build -t $BACKEND_REPO:$IMAGE_TAG $BACKEND_DIR
-      - docker tag $BACKEND_REPO:$IMAGE_TAG ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/$BACKEND_REPO:$IMAGE_TAG
+      - docker tag $BACKEND_REPO:$IMAGE_TAG public.ecr.aws/$Alias/$BACKEND_REPO:$IMAGE_TAG
 
   post_build:
     commands:
       - echo Pushing Docker images to ECR...
-      - docker push ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/$FRONTEND_REPO:$IMAGE_TAG
-      - docker push ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/$BACKEND_REPO:$IMAGE_TAG
+      - docker push public.ecr.aws/$Alias/$FRONTEND_REPO:$IMAGE_TAG
+      - docker push public.ecr.aws/$Alias/$BACKEND_REPO:$IMAGE_TAG
 
       - echo Preparing Kubernetes manifest output directory...
       - mkdir -p k8s-out
 
       # --- FRONTEND ---
-      - sed "s|IMAGE_PLACEHOLDER|${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/$FRONTEND_REPO:$IMAGE_TAG|g" $K8S_MANIFEST_DIR/Frontend/deployment.yaml > k8s-out/frontend-deployment.yaml
+      - sed "s|IMAGE_PLACEHOLDER|public.ecr.aws/$Alias/$FRONTEND_REPO:$IMAGE_TAG|g" $K8S_MANIFEST_DIR/Frontend/deployment.yaml > k8s-out/frontend-deployment.yaml
       - cp $K8S_MANIFEST_DIR/Frontend/service.yaml k8s-out/frontend-service.yaml
 
       # --- BACKEND ---
-      - sed "s|IMAGE_PLACEHOLDER|${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/$BACKEND_REPO:$IMAGE_TAG|g" $K8S_MANIFEST_DIR/Backend/deployment.yaml > k8s-out/backend-deployment.yaml
+      - sed "s|IMAGE_PLACEHOLDER|public.ecr.aws/$Alias/$BACKEND_REPO:$IMAGE_TAG|g" $K8S_MANIFEST_DIR/Backend/deployment.yaml > k8s-out/backend-deployment.yaml
       - cp $K8S_MANIFEST_DIR/Backend/service.yaml k8s-out/backend-service.yaml
 
       # --- DATABASE ---
