--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: frontend
-        image: public.ecr.aws/j6o9t4v5/capfrontend:latest
+        image:  026090545815.dkr.ecr.us-east-1.amazonaws.com/projectfront:latest
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
