--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
         yum install -y jq
 
   pre_build:
-    commnands:
+    commands:
       - export IMAGE_TAG=v1.${CODEBUILD_BUILD_NUMBER}
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 026090545815.dkr.ecr.us-east-1.amazonaws.com
       - echo Installing frontend and backend dependencies...
